Buttons, Title Styling, Updated fonts, etc.

--- a/Media/image-gallery.html
+++ b/Media/image-gallery.html
@@ -91,15 +91,15 @@
         <!-- Masthead -->
         <div class="row px-2 pb-5">
             <div class="col img-banner-container">
-                <h1 class="img-banner-title">Image Gallery</h1>
+                <h1 class="img-banner-title">Image Galleries</h1>
                 <img src="../img/image-gallery-0.png" alt="">
             </div>
         </div>
 
         <!-- Featured Image -->
-        <div class="row px-2 py-5">
+        <div class="row px-2 py-3 mb-5">
             <div class="col-lg-8">
-                <h2>Image of The Day</h2>
+                <h1 class="mb-4">Image of The Day</h1>
                 <a href="https://www.nasa.gov/image-feature/space-launch-system-rocket-at-dawn">
                     <img src="https://www.nasa.gov/sites/default/files/thumbnails/image/51982058640_3306aa1585_o.jpeg" alt="" class="img-fluid">
                 </a>
@@ -107,53 +107,53 @@
             <div class="col-lg-4 pb-5">
                 <div style="position: relative; top: 35%;">
                     <h2>Space Launch System Rocket at Dawn</h2>
-                    <p>NASA’s Space Launch System (SLS) rocket with the Orion spacecraft aboard is seen at sunrise atop a mobile launcher at Launch Complex 39B, Monday, April 4, 2022.</p>
-                    <button class="btn btn-primary btn-rounded" onclick="location.href='https\://www.nasa.gov/image-feature/space-launch-system-rocket-at-dawn'" type="button">View Image Feature</button>
+                    <p class="my-3">NASA’s Space Launch System (SLS) rocket with the Orion spacecraft aboard is seen at sunrise atop a mobile launcher at Launch Complex 39B, Monday, April 4, 2022.</p>
+                    <button class="btn btn-primary btn-rounded p-2 px-3" onclick="location.href='https\://www.nasa.gov/image-feature/space-launch-system-rocket-at-dawn'" type="button">View Image Feature</button>
                 </div>
             </div>
         </div>
     </div>
 
      <!-- Featured Jumbotron -->
-     <div class="row">
+     <div class="row mb-5">
         <div class="jumbotron w-100">
             <div class="jumbotron-container">
                 <div class="row">
                     <div class="col-lg-4 ">
                         <a href="https://www.nasa.gov/image-feature/prepping-for-wet-dress-rehearsal" class="card">
                             <div class="uni-header">
-                                <h3 class="card-title">NASA News</h3>
+                                <h2 class="card-title">NASA News</h2>
                             </div>
                             <img src="../img/image-gallery-1.png" alt="" class="img-fluid">
                         </a>
                             <div class="card-body">
-                                <p>Official NASA photographs from agency photographers chronicle what's making news across the agency, from launches and landings to important science announcements.</p>
-                                <button class="btn btn-primary btn-rounded" onclick="location.href='https\://www.nasa.gov/image-feature/prepping-for-wet-dress-rehearsal'" type="button">View NASA Images</button>
+                                <p>Official NASA photographs from agency photographers chronicle what's making news across the agency.</p>
+                                <button class="btn btn-primary btn-rounded p-2 px-3" onclick="location.href='https\://www.nasa.gov/image-feature/prepping-for-wet-dress-rehearsal'" type="button">View NASA Images</button>
                             </div>
                     </div>
                     <div class="col-lg-4">
                         <a href="http://images.nasa.gov/" class="card">
                             <div class="uni-header">
-                                <h3 class="card-title">NASA Image Library</h3>
+                                <h2 class="card-title mb-0">NASA Image Library</h2>
                             </div>
                             <img src="../img/image-gallery-2.png" alt="" class="img-fluid">
                         </a>
-                            <div class="card-body">                            
-                                <p>NASA's image library, <a href="images.nasa.gov">images.nasa.gov</a>, consolidates imagery and videos in one searchable locations. Users can download content in multiple sizes and resolutions and see the metadata associated with images, including EXIF/camera data on many images. </p>
-                                <button class="btn btn-primary btn-rounded" onclick="location.href='http\://images.nasa.gov/'" type="button">View NASA Images</button>
+                            <div class="card-body ">                            
+                                <p>NASA's image library, images.nasa.gov, consolidates imagery and videos in one searchable locations. </p>
+                                <button class="btn btn-primary btn-rounded m-1 p-2 px-3" onclick="location.href='http\://images.nasa.gov/'" type="button">View NASA Images</button>
                             </div>
                     </div>
                     <div class="col-lg-4">
                         <a href="https://www.nasa.gov/missions" class="card">
                             <div class="uni-header">
-                                <h3 class="card-title">Mission Galleries</h3>
+                                <h2 class="card-title">Mission Galleries</h2>
                             </div>
                             <img src="../img/image-gallery-3.png" alt="" class="img-fluid">
                         </a>
                         
                             <div class="card-body">
-                                <p>View images from our missions exploring the universe and our home planet. For a list of all missions, visit <a href="https://www.nasa.gov/missions">the missions A-Z page.</a></p>
-                                <button class="btn btn-primary btn-rounded" onclick="location.href='https\://www.nasa.gov/missions'" type="button">View Galleries</button>
+                                <p>View images from our missions exploring the universe and our home planet. For a list of all missions, visit the missions  <a href="https://www.nasa.gov/missions">A-Z page.</a></p>
+                                <button class="btn btn-primary btn-rounded m-1 p-2 px-3" onclick="location.href='https\://www.nasa.gov/missions'" type="button">View Galleries</button>
                             </div>
                     </div>
                 </div>
