--- a/Missions/artemis.html
+++ b/Missions/artemis.html
@@ -98,12 +98,12 @@
 
         <!-- Masthead Description  -->
         <div class="row px-2 py-5">
-            <div class="col">
+            <div class="col lead">
                 <p>Artemis I, formerly Exploration Mission-1,will be the first integrated flight test of NASA’s Deep Space Exploration Systems: the Orion spacecraft, Space Launch System (SLS) rocket, with the newly upgraded Exploration Ground Systems at Kennedy Space Center in Cape Canaveral, Florida. </p>
-                <button class="btn btn-primary btn-rounded mx-2" onclick="location.href='https\://www.nasa.gov/content/exploration-mission-1-overview'" type="button">OVERVIEW</button>
-                <button class="btn btn-primary btn-rounded mx-2" onclick="location.href='https\://www.nasa.gov/content/exploration-mission-1-images'" type="button">IMAGES</button>
-                <button class="btn btn-primary btn-rounded mx-2" onclick="location.href='https\://www.nasa.gov/content/exploration-mission-1-video-gallery'" type="button">VIDEOS</button>
-                <button class="btn btn-primary btn-rounded mx-2"onclick="location.href='https\://www.nasa.gov/content/exploration-mission-1-media-resources'" type="button">MEDIA RESOURCES</button>
+                <button class="btn btn-primary btn-rounded my-3 mx-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/content/exploration-mission-1-overview'" type="button">OVERVIEW</button>
+                <button class="btn btn-primary btn-rounded mx-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/content/exploration-mission-1-images'" type="button">IMAGES</button>
+                <button class="btn btn-primary btn-rounded mx-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/content/exploration-mission-1-video-gallery'" type="button">VIDEOS</button>
+                <button class="btn btn-primary btn-rounded mx-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/content/exploration-mission-1-media-resources'" type="button">MEDIA RESOURCES</button>
             </div>
         </div>
     </div>
@@ -159,7 +159,7 @@
         <!-- Article Feed -->
         <div class="row px-2 py-5">
             <div class="col-12">
-                <h2>Related Stories</h2>
+                <h1 class="mb-4">Related Stories</h1>
             </div>
             <div class="card-deck">
                 <div class="col-lg-4">
