--- a/Missions/commercial-crew.html
+++ b/Missions/commercial-crew.html
@@ -97,12 +97,12 @@
 
         <!-- Masthead Description  -->
         <div class="row px-2 py-5">
-            <div class="col">
-                <p>NASA's Commercial Crew Program is a partnership to develop and fly human space transportation systems. </p>
-                <button class="btn btn-primary btn-rounded mx-2" onclick="location.href='https\://www.nasa.gov/content/commercial-crew-program-overview'" type="button">OVERVIEW</button>
-                <button class="btn btn-primary btn-rounded mx-2" onclick="location.href='https\://www.nasa.gov/exploration/commercial/crew/gallery/Gallery-index.html'" type="button">IMAGES</button>
-                <button class="btn btn-primary btn-rounded mx-2" onclick="location.href='https\://www.nasa.gov/content/commercial-crew-videos'" type="button">VIDEOS</button>
-                <button class="btn btn-primary btn-rounded mx-2"onclick="location.href='https\://www.nasa.gov/content/commercial-crew-resources'" type="button">MEDIA RESOURCES</button>
+            <div class="col lead">
+                <p>NASA’s Commercial Crew Program is delivering on its goal of safe, reliable, and cost-effective human transportation to and from the International Space Station from the United States through a partnership with American private industry.  </p>
+                <button class="btn btn-primary btn-rounded mx-2 my-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/content/commercial-crew-program-overview'" type="button">OVERVIEW</button>
+                <button class="btn btn-primary btn-rounded mx-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/exploration/commercial/crew/gallery/Gallery-index.html'" type="button">IMAGES</button>
+                <button class="btn btn-primary btn-rounded mx-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/content/commercial-crew-videos'" type="button">VIDEOS</button>
+                <button class="btn btn-primary btn-rounded mx-2 p-2 px-3"onclick="location.href='https\://www.nasa.gov/content/commercial-crew-resources'" type="button">MEDIA RESOURCES</button>
             </div>
         </div>
 
@@ -159,7 +159,7 @@
         <!-- Article Feed -->
         <div class="row px-2 py-5">
             <div class="col-12">
-                <h2>Related Stories</h2>
+                <h1 class="mb-4">Related Stories</h1>
             </div>
             <div class="card-deck">
                 <div class="col-lg-4">    
