--- a/Topics/moon-to-mars.html
+++ b/Topics/moon-to-mars.html
@@ -97,19 +97,19 @@
 
         <!-- Masthead Description  -->
         <div class="row px-2 py-5">
-            <div class="col">
+            <div class="col lead">
                 <p>NASA will lead an innovative and sustainable program of exploration with commercial and international partners to send humans farther into space and bring back to Earth new knowledge and opportunities. </p>
-                <button class="btn btn-primary btn-rounded mx-2" onclick="location.href='https\://www.nasa.gov/topics/moon-to-mars/overview'" type="button">OVERVIEW</button>
-                <button class="btn btn-primary btn-rounded mx-2" onclick="location.href='https\://www.nasa.gov/topics/moon-to-mars/images'" type="button">IMAGES</button>
-                <button class="btn btn-primary btn-rounded mx-2" onclick="location.href='https\://www.nasa.gov/topics/moon-to-mars/videos'" type="button">VIDEOS</button>
-                <button class="btn btn-primary btn-rounded mx-2"onclick="location.href='https\://www.nasa.gov/topics/moon-to-mars/media-resources'" type="button">MEDIA RESOURCES</button>
+                <button class="btn btn-primary btn-rounded mx-2 my-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/topics/moon-to-mars/overview'" type="button">OVERVIEW</button>
+                <button class="btn btn-primary btn-rounded mx-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/topics/moon-to-mars/images'" type="button">IMAGES</button>
+                <button class="btn btn-primary btn-rounded mx-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/topics/moon-to-mars/videos'" type="button">VIDEOS</button>
+                <button class="btn btn-primary btn-rounded mx-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/topics/moon-to-mars/media-resources'" type="button">MEDIA RESOURCES</button>
             </div>
         </div>
-
+        <hr style="height:1px;border-width:0;background-color:gray;width:50%">
         <!-- Article Feed -->
         <div class="row px-2 py-5">
             <div class="col-12">
-                <h2>Related Stories</h2>
+                <h1 class="mb-4">Related Stories</h1>
             </div>
             <div class="card-deck">
                 <div class="col-lg-4">
