--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@
         </div>
 
         <!-- Description -->
-        <div class="row px-2 py-5">
+        <div class="row px-2 py-3">
             <div class="col">
                 <p>The National Aeronautics and Space Administration is America’s civil space program and the global leader in space exploration. The agency has a diverse workforce of just under 18,000 civil servants, and works with many more U.S. contractors, academia, and international and commercial partners to explore, discover, and expand knowledge for the benefit of humanity. With an annual budget of $23.2 billion in Fiscal Year 2021, which is less than 0.5% of the overall U.S. federal budget, NASA supports more than 312,000 jobs across the United States, generating more than $64.3 billion in total economic output (Fiscal Year 2019). </p>
                 <p>At its 20 centers and facilities across the country – and the only National Laboratory in space – NASA studies Earth, including its climate, our Sun, and our solar system and beyond. We conduct research, testing, and development to advance aeronautics, including electric propulsion and supersonic flight. We develop and fund space technologies that will enable future exploration and benefit life on Earth.</p>
@@ -164,8 +164,8 @@
                 </div>
                 <div class="row pt-4 uni-footer">
                     <div class="col">
-                        <button class="btn btn-primary btn-rounded m-1" onclick="location.href='https\://www.nasa.gov/about/sites/index.html'" type="button">View Map</button>
-                        <button class="btn btn-primary btn-rounded m-1" onclick="location.href='https\://www.nasa.gov/about/sites/index.html'" type="button">Visit NASA</button>
+                        <button class="btn btn-primary btn-rounded m-1 p-2 px-3" onclick="location.href='https\://www.nasa.gov/about/sites/index.html'" type="button">View Map</button>
+                        <button class="btn btn-primary btn-rounded p-2 px-3" onclick="location.href='https\://www.nasa.gov/about/sites/index.html'" type="button">Visit NASA</button>
                     </div>
                 </div>
             </div>
@@ -178,8 +178,8 @@
                 </div>
                 <div class="row pt-4 uni-footer">
                     <div class="col">
-                        <button class="btn btn-primary btn-rounded m-1" onclick="location.href='https\://osbp.nasa.gov/index.html'" type="button">Programs</button>
-                        <button class="btn btn-primary btn-rounded m-1" onclick="location.href='mailto:truphelia.m.parker@nasa.gov'" type="button">Paperwork</button>
+                        <button class="btn btn-primary btn-rounded m-1 p-2 px-3" onclick="location.href='https\://osbp.nasa.gov/index.html'" type="button">Programs</button>
+                        <button class="btn btn-primary btn-rounded p-2 px-3" onclick="location.href='mailto:truphelia.m.parker@nasa.gov'" type="button">Paperwork</button>
                     </div>
                 </div>
             </div>
@@ -194,7 +194,7 @@
                 </div>
                 <div class="row pt-4 uni-footer">
                     <div class="col-12">
-                        <button class="btn btn-primary btn-rounded m-1" onclick="location.href='https\://www.nasa.gov/content/submit-a-question-for-nasa'" type="button">Submit Question</button>
+                        <button class="btn btn-primary btn-rounded m-1 p-2 px-3" onclick="location.href='https\://www.nasa.gov/content/submit-a-question-for-nasa'" type="button">Submit Question</button>
                     </div>
                 </div>
             </div>
