--- a/Missions/dart.html
+++ b/Missions/dart.html
@@ -91,19 +91,19 @@
          <!-- Masthead -->
         <div class="row px-2">
             <div class="col img-banner-container">
-                <h1 class="img-banner-title">Double Asteroid Redirection Test (DART)</h1>
+                <h1 class="img-banner-title">DART</h1>
                 <img src="../img/dart-0.png" alt="">
             </div>
         </div>
 
         <!-- Masthead Description  -->
         <div class="row px-2 py-5">
-            <div class="col">
-                <p>DART is a spacecraft designed to impact an asteroid as a test of technology. DART’s target asteroid is NOT a threat to Earth. This asteroid system is a perfect testing ground to see if intentionally crashing a spacecraft into an asteroid is an effective way to change its course, should an Earth-threatening asteroid be discovered in the future. </p>
-                <button class="btn btn-primary btn-rounded mx-2" onclick="location.href='https\://www.nasa.gov/specials/pdco/index.html'" type="button">OVERVIEW</button>
-                <button class="btn btn-primary btn-rounded mx-2" onclick="location.href='https\://www.nasa.gov/planetarydefense/images'" type="button">IMAGES</button>
-                <button class="btn btn-primary btn-rounded mx-2" onclick="location.href='https\://www.nasa.gov/planetarydefense/videos'" type="button">VIDEOS</button>
-                <button class="btn btn-primary btn-rounded mx-2"onclick="location.href='https\://www.nasa.gov/planetarydefense/media-contacts-and-information'" type="button">MEDIA RESOURCES</button>
+            <div class="col lead">
+                <p>Double Asteroid Redirection Test (DART) is a spacecraft designed to impact an asteroid as a test of technology. DART’s target asteroid is NOT a threat to Earth. This asteroid system is a perfect testing ground to see if intentionally crashing a spacecraft into an asteroid is an effective way to change its course, should an Earth-threatening asteroid be discovered in the future. </p>
+                <button class="btn btn-primary btn-rounded mx-2 my-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/specials/pdco/index.html'" type="button">OVERVIEW</button>
+                <button class="btn btn-primary btn-rounded mx-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/planetarydefense/images'" type="button">IMAGES</button>
+                <button class="btn btn-primary btn-rounded mx-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/planetarydefense/videos'" type="button">VIDEOS</button>
+                <button class="btn btn-primary btn-rounded mx-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/planetarydefense/media-contacts-and-information'" type="button">MEDIA RESOURCES</button>
             </div>
         </div>
 
@@ -160,7 +160,7 @@
         <!-- Article Feed -->
         <div class="row px-2 py-5">
             <div class="col-12">
-                <h2>Related Stories</h2>
+                <h1 class="mb-4">Related Stories</h1>
             </div>
             <div class="card-deck">
                 <div class="col-lg-4">
