--- a/Topics/earth.html
+++ b/Topics/earth.html
@@ -98,20 +98,23 @@
 
         <!-- Masthead Description  -->
         <div class="row px-2 py-5">
-            <div class="col">
-                <p><strong>Your Planet Is Changing. We're On It.</strong></p>
-                <p>NASA uses the vantage point of space to increase our understanding of our home planet, improve lives, and safeguard our future.</p>
-                <button class="btn btn-primary btn-rounded mx-2" onclick="location.href='https\://www.nasa.gov/topics/earth/overview/index.html'" type="button">OVERVIEW</button>
-                <button class="btn btn-primary btn-rounded mx-2" onclick="location.href='https\://www.nasa.gov/topics/earth/images/index.html'" type="button">IMAGES</button>
-                <button class="btn btn-primary btn-rounded mx-2" onclick="location.href='https\://www.nasa.gov/topics/earth/videos/index.html'" type="button">VIDEOS</button>
-                <button class="btn btn-primary btn-rounded mx-2"onclick="location.href='https\://www.nasa.gov/topics/earth/news/index.html'" type="button">MEDIA RESOURCES</button>
+            <div class="col lead">
+                <p>NASA uses the vantage point of space to increase our understanding of our home planet, improve lives, and safeguard our future.
+
+                    We monitor Earth’s vital signs from land, air and space with a fleet of satellites and ambitious airborne and ground-based observation campaigns. </p>
+                <button class="btn btn-primary btn-rounded mx-2 my-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/topics/earth/overview/index.html'" type="button">OVERVIEW</button>
+                <button class="btn btn-primary btn-rounded mx-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/topics/earth/images/index.html'" type="button">IMAGES</button>
+                <button class="btn btn-primary btn-rounded mx-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/topics/earth/videos/index.html'" type="button">VIDEOS</button>
+                <button class="btn btn-primary btn-rounded mx-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/topics/earth/news/index.html'" type="button">MEDIA RESOURCES</button>
             </div>
         </div>
+
+        <hr style="height:1px;border-width:0;background-color:gray;width:50%">
 
         <!-- Article Feed -->
         <div class="row px-2 py-5">
             <div class="col-12">
-                <h2>Related Stories</h2>
+                <h1 class="mb-4">Related Stories</h1>
             </div>
             <div class="card-deck">
                 <div class="col-lg-4">
