--- a/Topics/humans-in-space.html
+++ b/Topics/humans-in-space.html
@@ -98,19 +98,22 @@
 
         <!-- Masthead Description -->
         <div class="row px-2 py-5">
-            <div class="col">
+            <div class="col lead">
                 <p>Every day since Nov. 2, 2000, people have been orbiting our planet inside the International Space Station, bringing together science, technology and human innovation to enable new technologies and research breakthroughs not possible on Earth. </p>
-                <button class="btn btn-primary btn-rounded mx-2" onclick="location.href='https\://www.nasa.gov/topics/humans-in-space/overview'" type="button">OVERVIEW</button>
-                <button class="btn btn-primary btn-rounded mx-2" onclick="location.href='https\://www.nasa.gov/topics/humans-in-space/images'" type="button">IMAGES</button>
-                <button class="btn btn-primary btn-rounded mx-2" onclick="location.href='https\://www.nasa.gov/topics/humans-in-space/videos'" type="button">VIDEOS</button>
-                <button class="btn btn-primary btn-rounded mx-2"onclick="location.href='https\://www.nasa.gov/topics/humans-in-space/media-resources'" type="button">MEDIA RESOURCES</button>
+
+                <button class="btn btn-primary btn-rounded mx-2 my-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/topics/humans-in-space/overview'" type="button">OVERVIEW</button>
+                <button class="btn btn-primary btn-rounded mx-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/topics/humans-in-space/images'" type="button">IMAGES</button>
+                <button class="btn btn-primary btn-rounded mx-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/topics/humans-in-space/videos'" type="button">VIDEOS</button>
+                <button class="btn btn-primary btn-rounded mx-2 p-2 px-3" onclick="location.href='https\://www.nasa.gov/topics/humans-in-space/media-resources'" type="button">MEDIA RESOURCES</button>
             </div>
         </div>
 
+        <hr style="height:1px;border-width:0;background-color:gray;width:50%">
+        
         <!-- Article Feed -->
         <div class="row px-2 py-5">
             <div class="col-12">
-                <h2>Related Stories</h2>
+                <h1 class="mb-4">Related Stories</h1>
             </div>
             <div class="card-deck">
                 <div class="col-lg-4">
